--- a/modules/ecr/app/src/dockerfile
+++ b/modules/ecr/app/src/dockerfile
@@ -1,18 +1,23 @@
-FROM quay.io/keycloak/keycloak:21.0 as builder
+FROM quay.io/keycloak/keycloak:21.0
 
 ENV KC_DB=postgres
 ENV KC_FEATURES=step-up-authentication 
 # just relevant if you would activate specific features
-ENV JGROUPS_DISCOVERY_PROTOCOL=JDBC_PING
 ENV KC_HEALTH_ENABLED=true
-#JDBC-PING cluster setup
+ENV KC_CACHE=ispn
 ENV KC_CACHE_CONFIG_FILE=cache-ispn-jdbc-ping.xml
+# ENV KC_FEATURES=step-up-authentication 
+ENV KC_HTTP_ENABLED=true
+ENV KC_HOSTNAME_STRICT=false
+ENV KC_HOSTNAME_STRICT_HTTPS=false
+ENV KC_METRICS_ENABLED=true
+ENV KC_PROXY=edge
+ENV KC_HOSTNAME_STRICT_BACKCHANNEL=false
+#JDBC-PING cluster setup
 COPY ./cache-ispn-jdbc-ping.xml /opt/keycloak/conf/cache-ispn-jdbc-ping.xml
-RUN /opt/keycloak/bin/kc.sh build
+RUN /opt/keycloak/bin/kc.sh build --cache-config-file=cache-ispn-jdbc-ping.xml
 
-FROM quay.io/keycloak/keycloak:21.0
-COPY --from=builder /opt/keycloak/lib/quarkus/ /opt/keycloak/lib/quarkus/
-COPY --from=builder /opt/keycloak/conf/cache-ispn-jdbc-ping.xml /opt/keycloak/conf
 WORKDIR /opt/keycloak
-CMD [ "start-dev" ]
+EXPOSE 8080
+CMD [ "start --optimized" ]
 ENTRYPOINT ["/opt/keycloak/bin/kc.sh"]
