--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -8,6 +8,12 @@ on:
         branches:
             - DEVX-142-feat/customized_theme_realm
 
+# GitHub token permissions
+permissions:
+    id-token: write
+    contents: read
+    pull-requests: write
+
 env:
   AWS_REGION: "us-east-2"
   terraformVersion: 1.3.6
